# ur-comp-sem-2023

./: README.html  README.org  ur-comp-sem-2023.bib
answer-keys/aug30/: Makefile  key.aux  key.bcf  key.blg  key.org  key.out  key.run.xml  key.tex  setup.org  shell.nix
code/: comp-sem.cabal  shell.nix
code/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes
code/src/: Intro.hs  October23.hs  September11.hs  September18.hs  September6.hs
latex/: Makefile  images.aux  images.bcf  images.run.xml  images.tex  shell.nix
notes/: course_themes.html  course_themes.org  formal_preliminaries.html  formal_preliminaries.org
notes/aug30/: Makefile  course_themes.html  course_themes.org  formal_preliminaries.html  formal_preliminaries.org  haskell_intro_1.org  haskell_intro_1.tex
notes/dec11/: dec11.html  dec11.org
notes/dec4/: dec4.html  dec4.org
notes/dec6/: dec6.html  dec6.org
notes/final/: final.html  final.org
notes/nov1/: nov1.html  nov1.org
notes/nov13/: nov13.html  nov13.org
notes/nov15/: nov15.html  nov15.org
notes/nov20/: nov20.html  nov20.org
notes/nov27/: nov27.html  nov27.org
notes/nov29/: nov29.html  nov29.org
notes/nov6/: nov6.html  nov6.org
notes/nov8/: nov8.html  nov8.org
notes/oct11/: oct11.html  oct11.org
notes/oct18/: oct18.html  oct18.org
notes/oct2/: oct2.html  oct2.org
notes/oct23/: oct23.html  oct23.org
notes/oct25/: oct25.html  oct25.org
notes/oct30/: oct30.html  oct30.org
notes/oct4/: oct4.html  oct4.org
notes/oct9/: oct9.html  oct9.org
(+75 files in other folders)
